<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foodscan.Activity.ForgotPasswordActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/Forgot_Password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp18" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_toolbar">

                <TextView
                    android:id="@+id/txt_login_instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Forgotpassword_instruction"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/dp30"
                    android:layout_marginRight="@dimen/dp30"
                    android:layout_marginTop="@dimen/dp40"
                    />

                <EditText
                    android:id="@+id/edt_email"
                    style="@style/EditInputField"
                    android:layout_below="@+id/txt_login_instruction"
                    android:layout_marginTop="@dimen/dp50"
                    android:background="@drawable/tv_button_stroke_gray"
                    android:hint="@string/Email_Id"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/gray"
                    />

                <TextView
                    android:id="@+id/txt_send"
                    style="@style/EditInputField"
                    android:layout_marginTop="@dimen/dp40"
                    android:background="@drawable/tv_button_green"
                    android:text="@string/Send"
                    android:gravity="center"
                    android:layout_below="@+id/edt_email"
                    />



            </RelativeLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>

