<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dp5"
    app:cardPreventCornerOverlap="true"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img_user" />

        <com.foodscan.CustomViews.TextViewBoldCustom
            android:id="@+id/lbl_thanx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_user"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/Thank_You"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp20"
            android:textStyle="bold" />

        <com.foodscan.CustomViews.TextViewCustom
            android:id="@+id/txt_success_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_thanx"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp5"
            android:fontFamily="sans"
            android:text="@string/You_have_successfully_login"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />


        <com.foodscan.CustomViews.TextViewCustom
            android:id="@+id/txt_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_below="@+id/txt_success_login"
            android:layout_marginTop="@dimen/sp20"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/OK"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18" />

    </RelativeLayout>

</android.support.v7.widget.CardView>