<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.foodscan.Activity.SignInActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp10"
                    android:src="@drawable/img_back_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/Sign_In"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp18"
                    android:textStyle="normal"
                     />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_toolbar">


                <TextView
                    android:id="@+id/txt_login_instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp30"
                    android:layout_marginRight="@dimen/dp30"
                    android:layout_marginTop="@dimen/dp40"
                    android:gravity="left"
                    android:text="@string/Type_in_your_Email_ID_and_Password_you_choose_for_scanfood_and_click_to_sign_in"
                     />


                <EditText
                    android:id="@+id/edt_email"
                    style="@style/EditInputField"
                    android:layout_below="@+id/txt_login_instruction"
                    android:layout_marginTop="@dimen/dp50"
                    android:background="@drawable/tv_button_stroke_gray"
                    android:hint="@string/Email_Id"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/light_gray"
                    android:textStyle="normal"
                     />

                <EditText
                    android:id="@+id/edt_password"
                    style="@style/EditInputField"
                    android:layout_below="@+id/edt_email"
                    android:layout_marginTop="@dimen/dp20"
                    android:background="@drawable/tv_button_stroke_gray"
                    android:hint="@string/Password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/light_gray"
                    android:textStyle="normal"
                     />

                <TextView
                    android:id="@+id/txt_signin"
                    style="@style/EditInputField"
                    android:layout_below="@+id/edt_password"
                    android:layout_marginTop="@dimen/dp40"
                    android:background="@drawable/tv_button_green"
                    android:gravity="center"
                    android:text="@string/Sign_In"
                    android:textStyle="normal"
                     />

                <TextView
                    android:id="@+id/txt_forgotpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_signin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp30"
                    android:padding="@dimen/dp5"
                    android:text="@string/can_not_sign_in_forgot_password"
                    android:textStyle="normal"
                     />


            </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>


