<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.foodscan.Activity.EditProfileActivity">

    <!--Toolbar-->

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary">

        <com.foodscan.CustomViews.TextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp10"
            android:src="@drawable/img_back_white" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_toolbar"
        android:padding="@dimen/dp20">

        <com.foodscan.CustomViews.TextViewCustom
            android:id="@+id/lbl_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:text="@string/Current_Password"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />


        <com.foodscan.CustomViews.EditTextCustom
            android:id="@+id/edt_current_account"
            style="@style/EditInputField"
            android:layout_below="@+id/lbl_current_password"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/tv_button_stroke_gray"
            android:hint="@string/Current_Password"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/gray"
            android:textColorHint="@color/light_gray"
            android:textStyle="normal" />

        <com.foodscan.CustomViews.TextViewCustom
            android:id="@+id/lbl_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_current_account"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/New_Password"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />

        <com.foodscan.CustomViews.EditTextCustom
            android:id="@+id/edt_new_password"
            style="@style/EditInputField"
            android:layout_below="@+id/lbl_new_pass"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/tv_button_stroke_gray"
            android:hint="@string/New_Password"
            android:imeOptions="actionGo"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            android:textColorHint="@color/light_gray"
            android:textStyle="normal" />

        <com.foodscan.CustomViews.TextViewCustom
            android:id="@+id/lbl_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_new_password"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/Confirm_Password"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />

        <com.foodscan.CustomViews.EditTextCustom
            android:id="@+id/edt_confirm_pass"
            style="@style/EditInputField"
            android:layout_below="@+id/lbl_confirm_pass"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/tv_button_stroke_gray"
            android:hint="@string/Confirm_Password"
            android:imeOptions="actionGo"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            android:textColorHint="@color/light_gray"
            android:textStyle="normal" />


    </RelativeLayout>

    <com.foodscan.CustomViews.TextViewCustom
        android:id="@+id/txt_save"
        style="@style/EditInputField"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp40"
        android:layout_marginTop="@dimen/dp40"
        android:background="@drawable/tv_button_green"
        android:gravity="center"
        android:text="@string/Change"
        android:textStyle="normal" />


</RelativeLayout>
